WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132783
[iOS WebKit2] REGRESSION (
r168493
): Canvasmark 2013 benchmark always hits the RELEASE_ASSERT in RemoteLayerTreeDrawingArea::flushLayers()
https://bugs.webkit.org/show_bug.cgi?id=132783
Summary
[iOS WebKit2] REGRESSION (r168493): Canvasmark 2013 benchmark always hits the...
Tim Horton
Reported
2014-05-10 14:20:29 PDT
Threading is hard (for me). This page:
http://www.kevs3d.co.uk/dev/canvasmark/
always hits the RELEASE_ASSERT added in
r168493
when running the benchmark. However! It's a total lie; we're getting didUpdate back from the UI process on the Web process's main thread while the Web process's CommitQueue is *in between* sendMessage() and setting m_hasFlushed. So, we assert. I'm going to move resetting m_hasFlushed *before* sendMessage(), because we really only care about asserting if we start flushing again before we have flushed the contexts; sendMessage() doesn't really have any bearing on flushing correctness.
Attachments
patch
(2.06 KB, patch)
2014-05-10 14:30 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-05-10 14:21:46 PDT
<
rdar://problem/16877326
>
Tim Horton
Comment 2
2014-05-10 14:30:08 PDT
Created
attachment 231235
[details]
patch
WebKit Commit Bot
Comment 3
2014-05-10 17:54:00 PDT
Comment on
attachment 231235
[details]
patch Clearing flags on attachment: 231235 Committed
r168589
: <
http://trac.webkit.org/changeset/168589
>
WebKit Commit Bot
Comment 4
2014-05-10 17:54:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug